# team-workspace

./: .gitignore  CLAUDE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  improvement.md
agents/: backend-engineer.md  frontend-engineer.md  pm.md  security-engineer.md  tester.md
study-tracker/: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
study-tracker/backend/apis/goals/: Makefile  README.md  docker-compose.yml  generate_specification.py  handler.py  main.py  pyproject.toml
study-tracker/backend/apis/goals/tests/: conftest.py  test_handler.py
study-tracker/backend/apis/records/: Dockerfile  README.md  docker-compose.yml  handler.py  main.py  openapi.json  pyproject.toml
study-tracker/backend/apis/records/tests/: conftest.py  test_handler.py
study-tracker/frontend/: index.html  package-lock.json  package.json  vite.config.ts
study-tracker/frontend/src/: App.tsx
study-tracker/frontend/src/components/common/: Button.tsx  Card.tsx  Modal.tsx  (+1 more)
study-tracker/frontend/src/hooks/: useGoals.ts  useStudyRecords.ts
study-tracker/frontend/src/pages/: CalendarPage.tsx  DashboardPage.tsx  GoalDetailPage.tsx  GoalsPage.tsx  StudyRecordPage.tsx
study-tracker/frontend/src/services/: api.ts  goalService.ts  studyService.ts
study-tracker/frontend/src/types/: goal.ts  study.ts
study-tracker/frontend/src/utils/: date.ts  format.ts
templates/: handoff-report.md  review-checklist.md  task-assignment.md
workflows/: bug-fix.md  feature-development.md
(+14 files in other folders)
